$Id: NEWS,v 1.300 2002-12-05 20:30:18 castaglia Exp $

CVS
---------------------------------
- Bug 1597 - Problems with HP-UX 10/11 trusted systems, mod_pam, and mod_unixpw.
- Bug 1482 - Add new %U meta to LogFormat, for logging original username.
- Bug 1683 - Handling of VirtualHosts on startup.  Now, rather than dying
  when unable to resolve a <VirtualHost> DNS hostname when starting up, the
  daemon will log the error, and skip the bad <VirtualHost>.
- Bug 1825 - AUTH macro namespace cleanup.  A "PR_" prefix has been added to
  the AUTH_* macros, to help prevent namespace collisions.  This means that
  some third-party auth modules may need to be updated.
- Bug 1806 - Add RFC2389 support.

1.2.7 - Released 05-12-2002
---------------------------------
- Bug 1840 - Problem with syslog default destination on HP-UX.  HPUX uses
  a default device of /dev/log.un rather than /dev/log.
- Bug 1844 - DisplayLogin %y macro is off by 1.  Consequence of scoreboarding
  code changes.
- Bug 1838 - Since 1.2.6: in add_useralias() setting flag CF_MERGEDOWN breaks
  aliased anonymous functionality.  The fix was to set the CF_MERGEDOWN flag
  only if the UserAlias directive is not being used in the <Anonymous>
  context.
- Bug 1812 - Double logging lines for ExtendedLog.  No need to merge this
  particular directive down.
- Bug 1848 - undefined reference to `halfdelay'. curses does not seem to
  provide this function, as ncurses does.  The patch works around this by
  using halfdelay() if linking against ncurses, and using nodelay() and sleep()
  if linking against curses.
- Bug 1839 - undefined reference to `get_fs_size'. Expand BSD
  statfs()/statvfs() support beyond FreeBSD.
- Bug 1680 - Error in startup script. Add /usr/local/sbin/ to the included
  rc script's $PATH
- Bug 1852 - Proftpd gets signal 11 on "quote site".  The mod_site module
  was not properly checking the number of parameters for SITE commands.