@@ -1,7 +1,11 @@
 #include "buildstamp.h"
 
+/* Application version (in various forms) */
 #define PROFTPD_VERSION_NUMBER		0x0001020801
 #define PROFTPD_VERSION_TEXT		"1.2.8rc1"
+
+/* Module API version */
+#define PR_MODULE_API_VERSION		0x20
 
 /* PR_STATUS is reported by --version-status -- don't ask why
  */
