@@ -26,7 +26,7 @@
 
 /*
  * House initialization and main program loop
- * $Id: main.c,v 1.130 2002-12-05 20:30:20 castaglia Exp $
+ * $Id: main.c,v 1.131 2002-12-05 20:37:19 castaglia Exp $
  */
 
 #include "conf.h"
@@ -1599,7 +1599,7 @@ static void fork_server(int fd, conn_t *l, unsigned char nofork) {
   /* Inform all the modules that we are now a child */
   log_debug(DEBUG7, "performing module session initializations");
 
-  init_child_modules();
+  pr_init_session_modules();
 
   log_debug(DEBUG4,"connected - local  : %s:%d",
                     inet_ntoa(*session.c->local_ipaddr),
@@ -3024,7 +3024,7 @@ int main(int argc, char *argv[], char **envp) {
   pr_init_netio();
   init_fs();
   init_config();
-  init_modules();
+  pr_preparse_init_modules();
 
   init_conf_stacks();
   if (parse_config_file(config_filename) == -1) {
@@ -3035,6 +3035,9 @@ int main(int argc, char *argv[], char **envp) {
 
   free_conf_stacks();
   fixup_servers();
+
+  pr_postparse_init_modules();
+  pr_remove_postparse_inits();
 
   /* We're only doing a syntax check of the configuration file.
    */
